--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
         <title>What's my name</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <form action="/process" method="post">
             Your Name: <input type="text" name="yourname">
-            <input type="submit" value="submit">
-            
+            <input type="submit" 
+                style="position: absolute; left: -9999px; width: 1px; height: 1px;"
+                tabindex="-1" />
+            <!-- The above makes it so submits on return no submit button -->
         </form>    
     </body>
 </html>
